--- a/Betman/app/src/main/res/values/strings.xml
+++ b/Betman/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
     <string name="tv_history_title">History</string>
 
 
-    <string name="notSubText">Για να δείτε τους VIP αγώνες πρέπει να γίνεται VIP μέλοι \n Πατήστε το παρακάτω κουμπκάκι να κάνετε εγγραφή</string>
+    <string name="notSubText">Για να δείτε τους VIP αγώνες πρέπει να γίνεται VIP μέλοι \n Πατήστε το παρακάτω κουμπάκι να κάνετε εγγραφή</string>
 
 </resources>
