--- a/Betman/app/src/main/res/values/strings.xml
+++ b/Betman/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="tv_history_title">History</string>
 
 
-    <string name="notSubText">To see the VIP content you have to subscribe!!</string>
+    <string name="notSubText">Become a VIP member today, get extra matches every day !!\n Best Betting Tips !! </string>
     <string name="my_own_title">Rate this app</string>
     <string name="my_own_message">Please rate the app</string>
     <string name="my_own_rate">Sure</string>
